--- a/src/core/layout/layout.css
+++ b/src/core/layout/layout.css
@@ -1,8 +1,5 @@
-@import "config/variables";
-
 .root {
-  @media (--medium) {
-    padding-left: 500px;
-    position: relative;
-  }
+  display: flex;
+  align-items: stretch;
+  height: 100%;
 }
