--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,15 @@
 @import "config/variables";
 
 body {
+  min-width: 1200px;
   color: var(--color-deep-gray);
+  background-color: var(--color-space-blue);
+}
+
+/* stylelint-disable-next-line selector-no-id */
+:global(#root) {
+  width: 100%;
+  height: 100vh;
 }
 
 a {
