--- a/src/pages/feed/feed-list/feed-list.css
+++ b/src/pages/feed/feed-list/feed-list.css
@@ -1,22 +1,12 @@
 @import "config/variables";
 
 .root {
-  @media (--medium) {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    overflow: auto;
-    margin-left: -350px;
-    width: auto;
-    height: 33%;
-    border-bottom: 1px solid var(--color-pearl-gray);
-  }
-
-  @media (--large) {
-    width: 350px;
-    height: 100%;
-    border-right: 1px solid var(--color-pearl-gray);
-  }
+  flex-shrink: 0;
+  width: 350px;
+  height: 100%;
+  border-right: 1px solid var(--color-pearl-gray);
+  background-color: var(--color-white);
+  overflow: auto;
 
   &Loading {
     display: flex;
