--- a/src/pages/feed/feed-list/feed-list.css
+++ b/src/pages/feed/feed-list/feed-list.css
@@ -8,13 +8,18 @@
   background-color: var(--color-white);
   overflow: auto;
 
-  &Loading {
+  &--loading,
+  &--empty {
     display: flex;
     align-items: center;
     justify-content: center;
+  }
 
-    &::before {
-      content: "Loading...";
-    }
+  &--loading::before {
+    content: "Loading...";
+  }
+
+  &--empty::before {
+    content: "Nothing new. Back to work.";
   }
 }
