show repo readme preview

--- a/src/pages/feed/feed-item-preview/feed-item-preview.css
+++ b/src/pages/feed/feed-item-preview/feed-item-preview.css
@@ -4,4 +4,21 @@
   width: 100%;
   padding: 10px 20px;
   background-color: var(--color-white);
+  overflow-y: auto;
+  overflow-x: hidden;
+
+  &--loading,
+  &--empty {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &--loading::before {
+    content: "Loading...";
+  }
+
+  &--empty::before {
+    content: "Select feed item to see preview.";
+  }
 }
