--- a/src/pages/feed/feed-list-item/feed-list-item.css
+++ b/src/pages/feed/feed-list-item/feed-list-item.css
@@ -4,7 +4,9 @@
   display: flex;
   padding: 10px;
   border-bottom: 1px solid var(--color-pearl-gray);
+  cursor: pointer;
 
+  &--active,
   &:hover {
     background-color: var(--color-pearl-gray);
   }
