--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@ body {
   background-color: var(--color-space-blue);
 }
 
-:global(#root) {
+/* stylelint-disable-next-line selector-max-id */
+:global #root {
   width: 100%;
   height: 100vh;
 }
